--- a/projects/Udemy Search By course name/Code/Udemy Search by course Name/Udemy Search Project.xaml
+++ b/projects/Udemy Search By course name/Code/Udemy Search by course Name/Udemy Search Project.xaml
@@ -213,7 +213,7 @@
                           <FlowStep.Next>
                             <FlowDecision x:Name="__ReferenceID6" DisplayName="Flow Decision" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
                               <FlowDecision.Condition>
-                                <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="WantToLogin =&quot;Yes&quot;" />
+                                <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="trayAgain =&quot;Yes&quot;" />
                               </FlowDecision.Condition>
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
