--- a/projects/Udemy Search By course name/Code/Udemy Search by course Name/User Getters.xaml
+++ b/projects/Udemy Search By course name/Code/Udemy Search by course Name/User Getters.xaml
@@ -3,11 +3,12 @@
     <x:Property Name="outCourseName" Type="OutArgument(x:String)" />
     <x:Property Name="outUserAcount" Type="OutArgument(x:String)" />
     <x:Property Name="WantToLogin" Type="OutArgument(x:String)" />
+    <x:Property Name="LogOut" Type="OutArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1149.3333333333333,536</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1149.3333333333333,1082</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>User_Getters_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -89,13 +90,13 @@
       <AssemblyReference>WindowsBase</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="User_Getters" sap:VirtualizedContainerService.HintSize="416,471.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="User_Getters" sap:VirtualizedContainerService.HintSize="512,1017.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="354,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_4" IsPassword="False" Label="Do you want to login Udemy ? " OptionsString="Yes;No" Title="Login ">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_4" IsPassword="False" Label="Do you want to login Udemy ? " OptionsString="Yes;No" Title="Login ">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[WantToLogin]</OutArgument>
       </ui:InputDialog.Result>
@@ -106,7 +107,18 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:InputDialog>
-    <ui:IfElseIfV2 Condition="[WantToLogin=&quot;Yes&quot;]" DisplayName="Else If" sap:VirtualizedContainerService.HintSize="354,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="450,332.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_5" IsPassword="False" Label="LogOut After Finish ? " OptionsString="Yes;No" Title="LogOut">
+      <ui:InputDialog.Result>
+        <OutArgument x:TypeArguments="x:String">[LogOut]</OutArgument>
+      </ui:InputDialog.Result>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+    </ui:InputDialog>
+    <ui:IfElseIfV2 Condition="[WantToLogin=&quot;Yes&quot;]" DisplayName="Else If" sap:VirtualizedContainerService.HintSize="450,270.6666666666667" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
       <ui:IfElseIfV2.Else>
         <Sequence DisplayName="Else" sap:VirtualizedContainerService.HintSize="416,25.333333333333332" sap2010:WorkflowViewState.IdRef="Sequence_3">
           <sap:WorkflowViewStateService.ViewState>
@@ -130,7 +142,7 @@
       </ui:IfElseIfV2.ElseIfs>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
@@ -156,7 +168,7 @@
         </Sequence>
       </ui:IfElseIfV2.Then>
     </ui:IfElseIfV2>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="354,268.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Your Udemy Course Name" Title="Please Enter your Course Name">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="450,268.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Your Udemy Course Name" Title="Please Enter your Course Name">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[outCourseName]</OutArgument>
       </ui:InputDialog.Result>
